Add random page

--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@ body {
 .form__section {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
 
   margin: 20px 0;
 }
