--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
   background-color: white;
   box-shadow: 0px 0px 10px rgb(100, 100, 100);
 
+  position: fixed;
   width: 110%;
   margin: 0 -5%;
 }
@@ -80,6 +81,10 @@ body {
 
 .navbar__list--bottom .navbar__link {
   color: black;
+}
+
+.page {
+  margin-top: 200px;
 }
 
 .recipe {
