--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ body {
 }
 
 .navbar {
+  margin: 0;
+  border: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,8 +21,8 @@ body {
   box-shadow: 0px 0px 10px rgb(100, 100, 100);
 
   position: fixed;
-  width: 110%;
-  margin: 0 -5%;
+  width: 100%;
+  margin: 0 0%;
 }
 
 .navbar__header {
@@ -42,9 +44,48 @@ body {
   margin: auto 10px;
 }
 
+.navbar__account-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+.navbar__account {
+  margin: 10px;
+  padding: 5px;
+  border-radius: 30px;
+  border: 0px solid rgb(50,50,50);
+  box-shadow: 0px 0px 4px rgb(50,50,50);
+
+  font-family: 'Quicksand', sans-serif;
+  text-decoration: none;
+
+  background: white;
+  color: black;
+
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.navbar__account .navbar__login-text {
+  font-size: 80%;
+  text-align: center;
+  margin-left: 10px;
+}
+
+.navbar__account .navbar__login-icon {
+  color: gray;
+  font-size: 40px;
+}
+
 .navbar__list {
   list-style: none;
-  margin: 5px;
+  margin: 5px 0;
 
   display: flex;
   flex-direction: row;
@@ -161,4 +202,32 @@ body {
 .form__textarea {
   resize: vertical;
   font-size: 16px;
+}
+
+.form__submit {
+  width: 50%;
+  height: 70px;
+  margin: 0 25%;
+
+  font-size: 150%;
+  font-family: 'Merriweather', serif;
+
+  background-color: rgb(168, 0, 0);
+  color: white;
+
+  border: 1px solid black;
+  border-radius: 10px;
+
+}
+
+.form__direction {
+  text-align: center;
+
+  display: inline-block;
+  width: 100%;
+  margin: 20px 0
+}
+
+.form__link {
+  color: rgb(168, 0, 0);
 }
