--- a/src/index.css
+++ b/src/index.css
@@ -152,6 +152,20 @@ body {
   color: black;
 }
 
+.recipe__author {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+
+  font-style: italic;
+  color: rgb(100, 100, 100);
+}
+
+.recipe__user {
+  color: black;
+  text-decoration: none;
+}
+
 .recipe__photo {
   width: 100%;
 }
