--- a/src/index.css
+++ b/src/index.css
@@ -50,12 +50,15 @@ body {
   right: 0;
 
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-end;
+
+  cursor: pointer;
+  user-select: none;
 }
 
 .navbar__account {
-  margin: 10px;
+  margin: 10px 10px 2px 10px;
   padding: 5px;
   border-radius: 30px;
   border: 0px solid rgb(50,50,50);
@@ -81,6 +84,35 @@ body {
 .navbar__account .navbar__login-icon {
   color: gray;
   font-size: 40px;
+}
+
+.account-panel__list {
+  padding: 0;
+  width: 70%;
+  margin: 0 15%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.account-panel__list-item {
+  padding: 5px 0;
+  margin: 0.5px;
+  border-radius: 10px;
+  border: 0px solid rgb(50,50,50);
+  box-shadow: 0px 0px 2px rgb(50,50,50);
+  
+  font-size: 75%;
+  font-family: 'Quicksand', sans-serif;
+  text-decoration: none;
+
+  background: white;
+  color: black;
+  width: 100%;
+  text-align: center;
+
+  cursor: pointer;
+  user-select: none;
 }
 
 .navbar__list {
