--- a/src/index.css
+++ b/src/index.css
@@ -240,6 +240,12 @@ body {
   font-size: 150%;
 }
 
+.for__label--required::before {
+  content: '*';
+  color: red;
+
+}
+
 .form__input {
   font-size: 24px;
   padding: 10px;
@@ -264,6 +270,16 @@ body {
   border: 1px solid black;
   border-radius: 10px;
 
+}
+
+.form__error {
+  color: red;
+  font-size: 80%;
+  margin-top: 5px;
+}
+
+.form__submit--error {
+  cursor: not-allowed;
 }
 
 .form__direction {
