--- a/src/index.css
+++ b/src/index.css
@@ -479,3 +479,27 @@ body {
   width: 60%;
   margin: 10% 20%;
 }
+
+.page-controller {
+  overflow-x: scroll;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 5px;
+}
+
+.page-controller__button {
+  min-width: 100px;
+  width: 100%;
+  height: 30px;
+
+  border: 1px solid black;
+  background: white;
+  border-radius: 5px;
+}
+
+.page-controller__button--current {
+  background: rgb(168, 0, 0);
+  color: white;
+}
