--- a/src/index.css
+++ b/src/index.css
@@ -179,6 +179,14 @@ body {
   width: 50%;
 }
 
+.comment {
+  margin: 2% 25%;
+  padding: 2% 2%;
+  width: 46%;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgb(150, 150, 150);
+}
+
 .recipe__header {
   font-size: 250%;
   margin: 5px 0;
@@ -538,4 +546,80 @@ body {
   margin-left: 5px;
 
   cursor: pointer;
+}
+
+.comment-input__title {
+  font-size: 20px
+}
+
+
+
+.comment-input__button {
+
+  font-size: 100%;
+  padding: 10px 15px;
+  border-radius: 5px;
+  border: 1px solid black;
+  background-color: rgb(200, 200, 200);
+}
+
+.comment {
+  position: relative;
+}
+
+.comment__header {
+  font-size: 24px;
+}
+
+.comment__user {
+  text-decoration: none;
+  color: black;
+}
+
+.comment__date {
+  font-size: 75%;
+}
+
+.comment__text {
+  margin: 20px 10px;
+  padding: 10px;
+  font-size: 100%;
+  background-color: rgb(240, 240, 240);
+  border-radius: 10px;
+}
+
+.comment__buttons {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.comment__button {
+  border: 0;
+  background: transparent;
+
+  margin: 10px;
+  font-size: 16px;
+
+  cursor: pointer;
+}
+
+.comment__button--delete {
+  color: red;
+}
+
+.comment__button--edit,
+.comment__button--save {
+  color: #3131b5;
+}
+
+.comment__textarea {
+  resize: vertical;
+
+  width: 98%;
+  height: 75px;
+  margin: 10px 0;
+  padding: 1%;
+  font-size: 120%;
+  border: 1px solid black;
 }
