--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,11 @@ body {
   font-size: 40px;
 }
 
+.navbar__photo {
+  width: 40px;
+  border-radius: 20px;
+}
+
 .account-panel__list {
   padding: 0;
   width: 70%;
@@ -569,6 +574,16 @@ body {
 
 .comment__header {
   font-size: 24px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.comment__avatar {
+  width: 60px;
+  border-radius: 10px;
+  margin: 15px;
 }
 
 .comment__user {
@@ -622,4 +637,16 @@ body {
   padding: 1%;
   font-size: 120%;
   border: 1px solid black;
+}
+
+.user__header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.user__photo {
+  width: 100px;
+  border-radius: 10px;
+  margin: 15px;
 }
