--- a/src/index.css
+++ b/src/index.css
@@ -712,3 +712,13 @@ body {
   
 
 }
+
+.form__photos {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 15px;
+}
+
+.form__photo {
+  width: 100%;
+}
