--- a/src/css/form.css
+++ b/src/css/form.css
@@ -142,9 +142,15 @@
     border-radius: 10px;
 }
 
-.form__error {
+.form__warning {
     color: red;
     font-size: 80%;
+    margin-top: 5px;
+}
+
+.form__error {
+    color: red;
+    font-size: 100%;
     margin-top: 5px;
 
     display: inline-block;
