--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -13,30 +13,36 @@
 
 .modal__content {
     position: fixed;
+    display: flex;
+    flex-direction: column;
 
-    top: 20%;
+    top: 60%;
     left: 30%;
 
     width: 40%;
-    height: 60%;
 
-    background-color: white;
+    background-color: rgba(255,255,255,0.8);
 
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 
 .modal__spinner {
-    width: 40%;
-    height: auto;
 
-    margin: 10% 30%;
+    margin: 10px;
+    height: 20%;
+    width: 20%;
+    align-self: center;
 
     animation-duration: 1s;
     animation-direction: normal;
     animation-name: rotation;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+}
+
+.modal__messages {
+    margin: 10px;
 }
 
 .modal__message {
