--- a/src/css/notification.css
+++ b/src/css/notification.css
@@ -1,28 +1,23 @@
 .notifications {
     z-index: 900;
-
     position: fixed;
     left: 0;
     bottom: 0;
-
     display: flex;
     flex-direction: column-reverse;
-
     margin: 15px 5px;
-
     cursor: default;
 }
 
 .notification {
-    background-color: rgba(255,255,255,1);
+    background-color: rgba(255, 255, 255, 1);
     color: black;
     padding: 10px 20px;
     margin: 3px;
-
     border-radius: 10px;
-    box-shadow: 0px 0px 10px rgb(100,100,100);
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 
 .notification--error {
-    color: red;;
+    color: red;
 }
